<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Samsung Workshop</string>
    <string name="user_details">User details</string>
    <string name="action_settings">Settings</string>
    <string name="reputation">Reputation: %,d</string>
    <string name="bio">bio</string>
    <string name="web_site">web site</string>
    <string name="age">age</string>
    <string name="location">location</string>
    <string name="reputation_change">reputation change</string>
    <string name="year">year</string>
    <string name="quarter">quarter</string>
    <string name="month">month</string>
    <string name="week">week</string>
    <string name="day">day</string>
    <string name="title_activity_main2">Main2Activity</string>

</resources>
